# LLM-Uncertainty-Study

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: conformal_prediction.ipynb
reports/270326/: slides.tex
tests/: test_ollama.py
utils/: conformal_prediction.py  generate_logits.py  metrics.py  ollama_client.py  prompt.py
