[project]
name = "llm-uncertainty-study"
version = "0.1.0"
description = "Re-producing and working on LLM Benchmark"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "numpy>=2.4.3",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.2",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
]
